1998-06-06  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* contrib/spamlist.py, utils/policy-builder.sh.in:
	    New version of  spamlist.py  from Roy Bixler, a bit
	    support for its output format into policy-builder.

1998-06-05  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/sm/sm.c:
	    Added "H" flag to the "sm" facility flags.
	    Altered here the way the BSMTP mode has worked for
	    ages.  Specifically now it requires EXPLICITE 'H' flag
	    to produce HELO/EHLO to the begining of the BSMTP
	    datastream.

	* utils/rotate-logs.sh.in, configure.in, utils/Makefile.in:
	    Made "rotate-logs" utility to be 1) autoconfig, and
	    2) installed every time a "make install" is done.

	* smtpserver/smtpserver.c:
	    Some clients seem to send "QUIT\r", and then close the
	    socket.  This caused indigestion and error logging.
	    Now it will at least tell what the input was, and
	    then have indigestion complaints..

	* proto/zmailer.sh.in, proto/Makefile.in, proto/newdb.in:
	    - Alterations on "zmailer" command, streamlining, adding
	      a "zmailer makedb" function to compile all common database.
	    - Option processing improvements on  newdb  to allow arbitary
	      order of options affecting the underlying  makedb.
	    - Makefile changes to (possibly) improve "make forms"
	      installation processing to be more generic.
	
	* utils/vacation/vacation.c:
	    Add HAVE_DB_H test to be third known/supported database.
	    Will it be sufficient for all environments shall be seen..

	* utils/vacation/convtime.c:
	    Add a couple autoconf includes

1998-06-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/newdb.in:
	    Smarter option processing, usage() function.

	* compat/sendmail/sendmail.c:
	    Recognize when no message was collected, and silently
	    ignore such input.

	* compat/sendmail/sendmail.c:
	    - Parse and verify option parameters for -B and -p options
	    - implement -s option (save From_)